# docgen-by-codegen

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
src/docgen_mcp/: __init__.py  config.py  core.py
src/docgen_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/docgen_mcp/agent/: __init__.py  base.py  deep_agent.py  memory.py  planning.py  sub_agents.py
src/docgen_mcp/analysis/: __init__.py
src/docgen_mcp/diagrams/: __init__.py
src/docgen_mcp/generation/: __init__.py
src/docgen_mcp/llm/: __init__.py  config.py  models.py  providers.py
src/docgen_mcp/markdown/: __init__.py
src/docgen_mcp/mcp_tools/: __init__.py
src/docgen_mcp/plugins/: __init__.py
src/docgen_mcp/search/: __init__.py
src/docgen_mcp/vault/: __init__.py
tests/: conftest.py  test_config.py  test_core.py  test_project_structure.py
